Add background color to dc-sense
Former-commit-id: 76639c6ea7702d947d553894cdb8c0c2721c73a8

--- a/src/angular-app/common/css/palaso-ui.css
+++ b/src/angular-app/common/css/palaso-ui.css
@@ -217,6 +217,7 @@ form.dc-multitext .wsid {
 }
 
 .dc-sense {
+	background-color: #FFF0DE;
 	border-right: 10px solid #F1F1F1;
 	border-radius: 10px;
 	margin-top: 20px;
