Add meaning to listview in dbe.html
Looks ugly -- something like "overflow: ellipsis" in CSS would be a good
idea, for example -- but it's functional. CSS fixes can come later.


Former-commit-id: d09f02dfdf4c217c17ff72785c8bb87cbcc36240

--- a/src/angular-app/languageforge/lexicon/views/dbe.html
+++ b/src/angular-app/languageforge/lexicon/views/dbe.html
@@ -17,6 +17,7 @@
                     <tbody>
                         <tr ng-class="{selected: e.id == currentEntry.id}" class="animate-repeat" ng-repeat="e in entries | filter:searchText">
                             <td ng-click="editEntry(e.id)">{{e.title}}</td>
+                            <td ng-click="editEntry(e.id)">{{getMeaning(e.entry)}}</td>
                         </tr>
                     </tbody>
                 </table>
