--- a/src/angular-app/languageforge/lexicon/views/settings.html
+++ b/src/angular-app/languageforge/lexicon/views/settings.html
@@ -23,7 +23,7 @@
 			</fieldset>
 			
 			<br />
-			<pre>{{config|json}}</pre>
+			<pre data-ng-show="showPre">{{config|json}}</pre>
 		</div>
 		
 		<!-- Right column: field setup -->
@@ -143,7 +143,7 @@
 			</div>
 			
 			<div class="well" data-ng-show="currentTaskId == 'semdom'">
-				<h3>Gather from Semantic Domains</h3>
+				<h3>Gather Words from Semantic Domains</h3>
 				<div class="control-group">
 					<label class="control-label" for="language">Language</label>
 					<div class="controls">
@@ -173,7 +173,7 @@
 				</div>
 				
 			</div>
-<pre>
+<pre data-ng-show="showPre">
 currentTaskId {{currentTaskId}}
 config.tasks['{{currentTaskId}}'] {{config.tasks[currentTaskId]|json}}
 </pre>
