WIP (almost complete): improve listview in LF site
*FOR NOW*, I'm splitting the listview into two separate components, one
(untouched and not renamed) for the ScriptureForge site, and one (renamed)
for the LanguageForge site. Once I've had a chance to verify that the
new listview (tentatively named lf-listview) looks good on both sites,
I'll merge these changes together.

Changes are:
 * Listview now says "(items) X-Y of Z" above the navigation controls.
 * Text "(items)" can be whatever you want: "Projects", "Words"...
 * Listview no longer shows "page" numbers.

Further changes might be made to styling, but that will be in site- or
project-specific CSS.

--- a/src/angular-app/languageforge/lexicon/views/add-grammar.html
+++ b/src/angular-app/languageforge/lexicon/views/add-grammar.html
@@ -17,7 +17,7 @@
 				</div>
 			</div>
 			<div id="entryList">
-				<div listview search="getPageDto()" items="items" visible-items="visibleItems" select="">
+				<div lf-listview search="getPageDto()" items="items" items-display-name="Words" visible-items="visibleItems" select="">
 					<table class="table table-condensed ">
 						<tbody>
 							<tr ng-class="{selected: itemIsSelected(item), even: $even, odd: $odd}"
