WIP: Rendered dictionary definition
Right now this is display-only. Next step is to hook it up correctly to
the config and model coming in from dc-entry. (And maybe move it so that
it's a sub-item of dc-entry, rather than having to be set as its own
separate control in the higher-level view template.) It could also use
some CSS styling.

--- a/src/angular-app/languageforge/lexicon/views/add-grammar.html
+++ b/src/angular-app/languageforge/lexicon/views/add-grammar.html
@@ -41,6 +41,7 @@
 					        style="padding-right: 5px"><i class="icon-arrow-left"></i></button>
 				</div>
 			</div>
+			<dc-rendered config="config" model="pageData.currentEntry">Definition will go here... eventually.</dc-rendered>
 			<div ng-show="true" id="entryItemView">
 				<dc-entry config="config" model="pageData.currentEntry"></dc-entry>
 			</div>
