--- a/src/css/languageforge/default/lf.css
+++ b/src/css/languageforge/default/lf.css
@@ -855,16 +855,21 @@ div.picklists li.selected {
 	background-color: #DDD;
 }
 
+dl.picklists {
+	margin-top: 0px;
+}
 dl.picklists div {
 	cursor: pointer;
 }
-dl.picklists div div div:hover {
+dl.picklists div div:hover {
 	background-color: #EEE;
 }
 dl.picklists div.selected {
 	background-color: #DDD;
 }
-
+dl.picklists dd {
+	padding-left: 5px;
+}
 dl#fields {
 	margin-top: 5px;
 	padding-left: 20px;
